more scrollbar fix about case list

--- a/state/supreme_court/style/court_1440.css
+++ b/state/supreme_court/style/court_1440.css
@@ -116,6 +116,7 @@
 .caseBttnList {
   border: none;
   max-height: 500px;
+  width: calc(96% + 17px);
 }
 
 .caseBttnBox {
